WebView part fully working - activity indicator - fix to plist data - fix to HistoricalEvent extension init(fromDictionary:

--- a/BoutTimeGame/HistoricalEvents.plist
+++ b/BoutTimeGame/HistoricalEvents.plist
@@ -24,7 +24,7 @@
 		<key>year</key>
 		<integer>1796</integer>
 		<key>detailsURL</key>
-		<string>https://en.wikipedia.org/wiki/Hanaoka_Seishū</string>
+		<string>https://en.wikipedia.org/wiki/Hanaoka_Seishu</string>
 	</dict>
 	<dict>
 		<key>eventDescription</key>
